--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -13,6 +13,8 @@
     --primary: 0 0% 9%;
     --primary-foreground: 0 0% 98%;
     --secondary: 0 0% 96.1%;
+    --success: 141.7 76.6% 73.1%;
+    --success-foreground: 141.7 76.6% 73.1%;
     --secondary-foreground: 0 0% 9%;
     --muted: 0 0% 96.1%;
     --muted-foreground: 0 0% 45.1%;
@@ -42,6 +44,8 @@
     --primary-foreground: 0 0% 9%;
     --secondary: 0 0% 14.9%;
     --secondary-foreground: 0 0% 98%;
+    --success: 141.7 76.6% 73.1%;
+    --success-foreground: 141.7 76.6% 73.1%;
     --muted: 0 0% 14.9%;
     --muted-foreground: 0 0% 63.9%;
     --accent: 0 0% 14.9%;
